Regression: Viewlayer denoising versioning settings no longer apply correctly #121345

Closed
opened 2024-05-02 14:53:55 +02:00 by michael campbell · 5 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22

Blender Version
Broken version: 4.2.0 Alpha, branch: main, commit date: 2024-04-30 20:02, hash: 02f2d73b78f4
Broken version: 4.1.1
Broken version: 4.0.2
Worked: 3.6.11

Caused by d9da86dd15

Short description of error
The versioning code that enabled View Layer -> Filter -> Denoising on old files (E.G. Files from the Blender 2.79 era) doesn't appear to be functioning properly in newer versions of Blender

Exact steps for others to reproduce the error

  1. Download and open a old Blender file in a new version of Blender. The Barbershop scene from https://www.blender.org/download/demo-files/ seems to have this issue.
  2. Notice that View Layer Properties -> Filter -> Denoising is disabled.
  3. Compare this to older versions of Blender like 3.0.0 and notice it is enabled there.

Original reoprt **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-30 20:02, hash: `02f2d73b78f4` Worked: previous build of 4.2.0 alpha (not sure of hash as deleted the zip now)

when final render completes, no denoising happens to the combined pass. Same issue when using open image denoise with or without the new use gpu option. Also denoising doesn't happen with optix.

Tried changing between cuda and optix in the system preferences, but both have the same issue.

Viewport denoising works fine for both optix and OIDN, but it did take an excessively long time before the first sample after changing to rendered viewport mode.

The compositor denoise node works fine.

This is a fresh installation of blender with no addons installed.

Exact steps for others to reproduce the error

  1. open barbershop
  2. change render settings to:image
  3. hit render
  4. render finishes fast, but no denoising happens.
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22 **Blender Version** Broken version: 4.2.0 Alpha, branch: main, commit date: 2024-04-30 20:02, hash: `02f2d73b78f4` Broken version: 4.1.1 Broken version: 4.0.2 Worked: 3.6.11 Caused by d9da86dd151d4c5b0ee4e3d45d6ea20a31a4b8e8 **Short description of error** The versioning code that enabled `View Layer -> Filter -> Denoising` on old files (E.G. Files from the Blender 2.79 era) doesn't appear to be functioning properly in newer versions of Blender **Exact steps for others to reproduce the error** 1. Download and open a old Blender file in a new version of Blender. The Barbershop scene from https://www.blender.org/download/demo-files/ seems to have this issue. 2. Notice that `View Layer Properties -> Filter -> Denoising` is disabled. 3. Compare this to older versions of Blender like 3.0.0 and notice it is enabled there. --- <details> <summary><b>Original reoprt</b></summary> **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-30 20:02, hash: `02f2d73b78f4` Worked: previous build of 4.2.0 alpha (not sure of hash as deleted the zip now) when final render completes, no denoising happens to the combined pass. Same issue when using open image denoise with or without the new use gpu option. Also denoising doesn't happen with optix. Tried changing between cuda and optix in the system preferences, but both have the same issue. Viewport denoising works fine for both optix and OIDN, but it did take an excessively long time before the first sample after changing to rendered viewport mode. The compositor denoise node works fine. This is a fresh installation of blender with no addons installed. **Exact steps for others to reproduce the error** 1. open barbershop 2. change render settings to:![image](/attachments/226d86f5-ed55-4b8a-ba10-d2e4e7a4976e) 3. hit render 4. render finishes fast, but no denoising happens. </details>
128 KiB
michael campbell added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2024-05-02 14:53:55 +02:00

Just tried a new scene, and denoising does work. Must be caused by an incompatibility with blend files created in previous versions of Blender perhaps? Although I did resave in blender 4.2 alpha, but still no joy.

Just tried a new scene, and denoising does work. Must be caused by an incompatibility with blend files created in previous versions of Blender perhaps? Although I did resave in blender 4.2 alpha, but still no joy.
Iliya Katushenock changed title from no denoising happening after rendering. to Regression: No denoising happening after rendering 2024-05-02 15:07:57 +02:00
Iliya Katushenock added the
Interest
Render & Cycles
Interest
VFX & Video
labels 2024-05-02 15:08:03 +02:00
Member

I tested Blender 4.1.1 and Blender 4.2.0 38fcaf9ab9 and can confirm denoising is not working in the Barbershop scene. But this is kind of expected.

In the View Layer Properties -> Filter section the Denoising option is turned off. Meaning denoising will not be applied to this view layer no matter your render settings. But if you turn this setting on, then denoising can be applied.

However when I went back to Blender 3.6.11, View Layer Properties -> Filter -> Denoising is turned on. So there must be a regression between 3.6 and 4.1.1 causing this issue when opening old files.


Viewport denoising works fine for both optix and OIDN, but it did take an excessively long time before the first sample after changing to rendered viewport mode.

I can't reproduce this issue. Maybe you should make a seperate bug report for that?

I tested Blender 4.1.1 and Blender 4.2.0 38fcaf9ab93f and can confirm denoising is not working in the Barbershop scene. But this is kind of expected. In the `View Layer Properties -> Filter` section the `Denoising` option is turned off. Meaning denoising will not be applied to this view layer no matter your render settings. But if you turn this setting on, then denoising can be applied. However when I went back to Blender 3.6.11, `View Layer Properties -> Filter -> Denoising` is turned on. So there must be a regression between 3.6 and 4.1.1 causing this issue when opening old files. --- > Viewport denoising works fine for both optix and OIDN, but it did take an excessively long time before the first sample after changing to rendered viewport mode. I can't reproduce this issue. Maybe you should make a seperate bug report for that?
Alaska added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-05-03 10:32:56 +02:00
Alaska changed title from Regression: No denoising happening after rendering to Regression: Viewlayer denoising versioning settings no longer apply correctly 2024-05-03 10:33:29 +02:00
Member

Broke between good cc5f666672 & bad 9cbe156d6a

Broke between good cc5f66667244 & bad 9cbe156d6a93
Member

Caused by d9da86dd15 btw.

CC @brecht

(will check if moving denoiser versioning code to do_versions_after_linking_290 from blo_do_versions_290 will fix it for me)

Caused by d9da86dd151d4c5b0ee4e3d45d6ea20a31a4b8e8 btw. CC @brecht (will check if moving denoiser versioning code to `do_versions_after_linking_290` from `blo_do_versions_290` will fix it for me)
Philipp Oeser added the
Module
Render & Cycles
label 2024-05-03 13:44:23 +02:00
Member

Yep, that was it, see possible fix in !121389

Yep, that was it, see possible fix in !121389
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-06 13:19:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121345
No description provided.