Fix #121345: Viewlayer denoising versioning dont apply correctly

Caused by d9da86dd15

Above commit moved denoising versioning from the
`do_versions_after_linking` variant of versioning to `do_versions`, now
move back.

NOTE: I still have to gain full understanding as to where
`after_linking` is needed and where it is not, trying to read up on
this... do_versions_after_linking